--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+  <div class="container">
     <h1 id="title">Form Validation</h1>
     <p id="description">Please fill out the form below:</p>
     
@@ -90,8 +91,10 @@
           </tr>
         </thead>
         <tbody id="tableBody">
+          <!-- Table data will be dynamically added here -->
         </tbody>
     </table>
+  </div>
 
    <script src="https://app.zenclass.in/sheets/v1/js/zen/suite/bundle.js"></script>
    <script src="./script.js"></script>
